Add a simple API onto solutions_log
Updates #869
